# sqlite_orm

./: README.md  appveyor.yml
.github/workflows/: cmake_mac.yml
dev/: connection_container.h  connection_holder.h  error_code.h  interface_definitions.h  statement_serializer.h  storage.h  storage_base.h  table.h
dev/implementations/: storage_base_definitions.h
examples/: CMakeLists.txt  migrations.cpp
include/sqlite_orm/: sqlite_orm.h
not_single_header_include/sqlite_orm/: sqlite_orm.h
tests/: storage_non_crud_tests.cpp  transaction_tests.cpp
